fix: comment out dark mode inclusion

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -3,7 +3,7 @@
 
 html {
   @media (prefers-color-scheme: dark) {
-    @include v.$DarkTheme($DarkTheme: true);
+  //   @include v.$DarkTheme($DarkTheme: true);
   }
 }
 
