--- a/styles/themes/_variables.scss
+++ b/styles/themes/_variables.scss
@@ -16,5 +16,5 @@ $qua50: #d3c1c387;
 $qui: #AE8CA3;
 $qui50: #ae8ca380;
 
-@mixin DarkTheme($DarkTheme: true) {
-}
+// @mixin DarkTheme($DarkTheme: true) {
+// }
